--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
     "verror": "^1.10.0"
   },
